<resources>
    <string name="app_name">AndroidApplication</string>
    <string name="hello_world">Hello World !</string>
    <string name="btn_toChild">Vers Activité enfant !</string>
    <string name="btn_formValidation">Enregistrer</string>
    <string name="btn_connectionValidation">Se connecter</string>
    <string name="tview_inscriptionAdmin">Inscription Administrateur</string>
    <string name="tview_inscription">Inscription</string>
    <string name="tview_email">Email</string>
    <string name="tview_password">Mot de passe</string>

    <string name="app_shared_prefs">dev.aspyro.androidapplication_preferences</string>
    <string name="first_time_opening">FIRST_TIME_OPENING_KEY</string>
    <string name="btn_toConnection">Se connecter</string>
    <string name="btn_toInscription">S\'inscrire</string>
    <string name="tview_connection">Connexion</string>
    <string name="DBName">MyDatabase.db</string>
    <string name="btn_manageUsers">Modifier Accès Utilisateurs</string>
    <string name="btn_manageAssets">Modifier Matériel</string>
    <string name="btn_addAssets">Ajouter matériel</string>
    <string name="edittext_id">Id</string>
    <string name="edittext_reference">Référence</string>
    <string name="edittext_brand">Marque</string>
    <string name="edittext_model">Modèle</string>
</resources>