<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminFormActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_side"
            android:layout_marginRight="@dimen/margin_side"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/tview_inscriptionAdmin"
            android:textSize="@dimen/text_formTitle_size"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tview_email"
            android:labelFor="@id/et_email_inscriptionAdmin"/>
        <EditText
            android:id="@+id/et_email_inscriptionAdmin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tview_password"
            android:labelFor="@id/et_password_inscriptionAdmin"/>
        <EditText
            android:id="@+id/et_password_inscriptionAdmin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />



        <Button
            android:id="@+id/btn_adminFormValidation"
            android:onClick="onAdminFormClickManager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_formValidation"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>