<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/margin_side"
            android:orientation="vertical"
            >
            <LinearLayout
                android:id="@+id/ll_manageusers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <Button
                    android:id="@+id/btn_manageUsers"
                    android:onClick="onListingClickManager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_manageUsers"
                    android:layout_marginVertical="@dimen/margin_top"
                    android:layout_marginHorizontal="@dimen/margin_top"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <Button
                    android:id="@+id/btn_manageAssets"
                    android:onClick="onListingClickManager"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_manageAssets"
                    android:layout_marginVertical="@dimen/margin_top"
                    android:layout_marginHorizontal="@dimen/margin_top"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btn_addAsset"
                    android:onClick="onListingClickManager"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_addAssets"
                    android:layout_marginVertical="@dimen/margin_top"
                    android:layout_marginHorizontal="@dimen/margin_top"
                    android:layout_weight="1"
                    />
            </LinearLayout>

<LinearLayout
    android:id="@+id/linear_et_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="visible"
    android:orientation="horizontal"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">
        <EditText
            android:id="@+id/et_assetId"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="number"
            android:enabled="false"
            android:hint="@string/edittext_id">

        </EditText>
        <EditText
            android:id="@+id/et_assetReference"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="text"
            android:hint="@string/edittext_reference">

        </EditText>
        <Spinner
            android:id="@+id/sp_assetStatus"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:entries="@array/statuses"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">
        <Spinner
            android:id="@+id/sp_assetHardware"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:entries="@array/hardwares"/>

        <EditText
            android:id="@+id/et_assetBrand"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="text"
            android:hint="@string/edittext_brand">

        </EditText>
        <EditText
            android:id="@+id/et_assetModel"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="text"
            android:hint="@string/edittext_model">

        </EditText>
    </LinearLayout>
</LinearLayout>

        </LinearLayout>

        <ListView
            android:id="@+id/lv_listingProduit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>