<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConnectionActivity">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:gravity="center_vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_side"
        android:layout_marginRight="@dimen/margin_side"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginBottom="@dimen/margin_top"
        android:text="@string/tview_connection"
        android:textSize="@dimen/text_formTitle_size"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tview_email"
        android:labelFor="@id/et_email_inscription"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginLeft="@dimen/margin_side"
        android:layout_marginRight="@dimen/margin_side"
        />
    <EditText
        android:id="@+id/et_email_inscription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="@dimen/margin_top"
        android:layout_marginLeft="@dimen/margin_side"
        android:layout_marginRight="@dimen/margin_side"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tview_password"
        android:labelFor="@id/et_password_inscription"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginLeft="@dimen/margin_side"
        android:layout_marginRight="@dimen/margin_side"
        />
    <EditText
        android:id="@+id/et_password_inscription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginBottom="@dimen/margin_top"
        android:layout_marginLeft="@dimen/margin_side"
        android:layout_marginRight="@dimen/margin_side"
        />



    <Button
        android:id="@+id/btn_FormValidation"
        android:onClick="onFormClickManager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_connectionValidation"
        android:layout_marginLeft="@dimen/margin_side"
        android:layout_marginRight="@dimen/margin_side"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginBottom="@dimen/margin_top"
        />
  </LinearLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>